--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -35,10 +35,10 @@
            <a class="nav-link" href="#chapter1">Funding Sources</a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#chapter1">Mental Health at UMD</a>
+           <a class="nav-link" href="#chapter2">Mental Health at UMD</a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#chapter1">A National Crisis</a>
+           <a class="nav-link" href="#chapter3">A National Crisis</a>
          </li>
        </ul>
      </div>
@@ -50,18 +50,18 @@
 <strong><p class= "headline">Mental Health Funding Matters</p></strong>
 <strong><p class="subheadline">One in 25 Americans are living with a serious mental illness. <br>What is UMD doing for the mental health of its students?</p></strong>
 <p class= "byline">By Julianne Heberlein</p>
-<strong><p class="intro">When sophomore English and government and politics major Reid Buskirk showed up to the University Health Center, he was expecting to see his psychiatrist for a refill of his manic depression medication. Instead, he was told that his appointment was cancelled and would have to wait two weeks to reschedule.
-“I felt panicked,” said Buskirk. “When faced with the possibility of not having my medication for a while, it was terrifying.”
+<strong><p class="intro">“I felt panicked,” said Buskirk. “When faced with the possibility of not having my medication for a while, it was terrifying.”
 </p></strong>
 <div class="row">
   <a name="chapter1"></a><h1>Funding Sources</h1>
+  <p>When sophomore English and government and politics major Reid Buskirk showed up to the University Health Center, he was expecting to see his psychiatrist for a refill of his manic depression medication. Instead, he was told that his appointment was cancelled and would have to wait two weeks to reschedule.</p>
   <p>“I felt panicked,” said Buskirk. “When faced with the possibility of not having my medication for a while, it was terrifying.”</p><br><br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/1zyjJTWsvTs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="caption">Sophomore Reid Buskirk share his experience will mental illness as a college student.</p>
-  <p>The University of Maryland has various mental health resources on campus, including counseling and psychiatric services. While psychiatric services at the University Health Center are funded by an annual $82 student fee, the Counseling Center is fully funded by the state government.</p>
+<iframe width="700" height="400" src="https://www.youtube.com/embed/1zyjJTWsvTs" class="video" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <p class="caption">Sophomore Reid Buskirk shares his experience with mental illness on campus.<br> Source: UMD Department of Resident Life.</p><br><br>
+  <br><p>The University of Maryland has various mental health resources on campus, including counseling and psychiatric services. While psychiatric services at the University Health Center are funded by an annual $82 student fee, the Counseling Center is fully funded by the state government.</p>
   <p>The counseling service budget is $2,348,578. The Pepsi Corporation has awarded the center grants that cover approximately 10% of its budget, while the state covers the rest of it.</p>
   <p>This budget covers the salaries of 17 psychologists, one care manager, two triage counselors, two seasonal psychologists and four full-time doctoral interns. Students have eight free individual counseling sessions per year, but many students wait over a month to been seen.</p>
-<h1>Mental Health at UMD</h1>
+<a name="chapter2"></a><h1>Mental Health at UMD</h1>
 <p>In February 2018, a student group called Scholars Promoting and Revitalizing Care launched the #30DaysTooLate campaign to draw attention to the excessive wait times at the Counseling Center. </p>
 <p>Senior Kristen Brockett serves as president of SPARC and has worked to advocate for mental health resources on campus. She thinks there can always be more mental health resources added, but the university needs to specifically focus on adding more staff psychologists.</p>
 <p>Junior psychology major Erin Hill serves as the administrator of the Help Center, an on-campus peer crisis hotline. She offers free peer counseling in-person and over the phone for students struggling with mental health.</p>
@@ -74,7 +74,7 @@
  <h2>How many intake appointments does the Counseling Center conduct per academic year?</h2>
  <p>During the last academic year, the Counseling Center had 2,606 students come in for an intake appointment, according the Counseling Center’s 2017-2018 annual report. This was a 16% increase from the prior three-year average. </p>
  <div id="visitsbyyear"></div>
- <em>Source: Data collected from the UMD Counseling Center's annual reports</em>
+ <em>Source: Data collected from the UMD Counseling Center's 2012-2018 annual reports</em>
 </div>
 <!--end visits graphic container--><br>
 <!-- race graphic container-->
@@ -89,7 +89,7 @@
 <p>Although many students have voiced their desire for more staff psychologists, the Counseling Center has never been at full staff capacity, said Counseling Center Director Sharon Kirkland-Gordon.</p>
 <p>“I can’t remember a time we were fully staffed,” she said. “Some staff members have died unexpectedly in prior years or they leave for a different opportunity.”</p>
 <p>The center just hired three staff psychologists who will start seeing students in the fall, putting the Counseling Center at full staff capacity. Then, Kirkland-Gordon wants to reevaluate the ratio of staff psychologists to students to see how the student body’s needs are being met.</p><br>
-<h1>A National Crisis</h1>
+<a name="chapter3"></a><h1>A National Crisis</h1>
 <p>Suicide is the second leading cause of death among college students, according to Active Minds, a nonprofit advocacy organization for mental health. With 39% of college students experiencing a serious mental health issue, they are more likely to talk about mental health than older generations. </p>
 <p>Even though mental illness is starting to become destigmatized, only 44% of adults and less than 20% of children and teenagers with diagnosed mental illnesses get the treatment they need. One in five adults will have a diagnosable mental illness. Half of the world population will experience a mental health condition in their lifetime. </p>
     <iframe src="https://uploads.knightlab.com/storymapjs/97d93884d49d417b145d9448e65e4131/umd-campus-mental-health-resources/index.html" frameborder="0" width="100%" height="800"></iframe>
@@ -100,7 +100,7 @@
 </div>
 <footer>
     <div id="footer">
-          Footer text <br>© Julianne Heberlein 2019
+          © Julianne Heberlein 2019
   </div>
 </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
