--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|PT+Serif:400,700" rel="stylesheet">
+<a href="https://icons8.com/icon/81355/smart"></a>
 
 
 <!-- Load c3.css -->
@@ -27,7 +28,9 @@
 <body>
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-     <a class="navbar-brand" href="#">Mental Health Funding Matters</a>
+     <a class="navbar-brand" href="#">
+       <img src="https://img.icons8.com/doodle/48/000000/smart-.png">
+       Mental Health Funding Matters</a>
 
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
        <ul class="navbar-nav mr-auto">
@@ -45,7 +48,7 @@
     </nav>
     <!--End navbar-->
 
-    <center><img src="ccbuilding.jpg" class="hero-image"></center>
+    <center><img src="head.png" class="hero-image"></center>
 <div id="container">
 <strong><p class= "headline">Mental Health Funding Matters</p></strong>
 <strong><p class="subheadline">One in 25 Americans are living with a serious mental illness. <br>What is UMD doing for the mental health of its students?</p></strong>
@@ -53,15 +56,21 @@
 <strong><p class="intro">“I felt panicked,” said Buskirk. “When faced with the possibility of not having my medication for a while, it was terrifying.”
 </p></strong>
 <div class="row">
-  <a name="chapter1"></a><h1>Funding Sources</h1>
+  <a name="chapter1"></a><img src="https://img.icons8.com/doodle/48/000000/smart-.png" class="icon"><h1>Funding Sources</h1>
   <p>When sophomore English and government and politics major Reid Buskirk showed up to the University Health Center, he was expecting to see his psychiatrist for a refill of his manic depression medication. Instead, he was told that his appointment was cancelled and would have to wait two weeks to reschedule.</p>
   <p>“I felt panicked,” said Buskirk. “When faced with the possibility of not having my medication for a while, it was terrifying.”</p><br><br>
-<iframe width="700" height="400" src="https://www.youtube.com/embed/1zyjJTWsvTs" class="video" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="caption">Sophomore Reid Buskirk shares his experience with mental illness on campus.<br> Source: UMD Department of Resident Life.</p><br><br>
+
+    <!--Responsive video -->
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1zyjJTWsvTs" allowfullscreen></iframe>
+    </div>
+
+  <!-- End embed container -->
+  <p class="caption">Sophomore Reid Buskirk shares his experience with mental illness on campus. Source: UMD Department of Resident Life.</p><br>
   <br><p>The University of Maryland has various mental health resources on campus, including counseling and psychiatric services. While psychiatric services at the University Health Center are funded by an annual $82 student fee, the Counseling Center is fully funded by the state government.</p>
   <p>The counseling service budget is $2,348,578. The Pepsi Corporation has awarded the center grants that cover approximately 10% of its budget, while the state covers the rest of it.</p>
   <p>This budget covers the salaries of 17 psychologists, one care manager, two triage counselors, two seasonal psychologists and four full-time doctoral interns. Students have eight free individual counseling sessions per year, but many students wait over a month to been seen.</p>
-<a name="chapter2"></a><h1>Mental Health at UMD</h1>
+<a name="chapter2"></a><img src="https://img.icons8.com/doodle/48/000000/smart-.png" class="icon"><h1>Mental Health at UMD</h1>
 <p>In February 2018, a student group called Scholars Promoting and Revitalizing Care launched the #30DaysTooLate campaign to draw attention to the excessive wait times at the Counseling Center. </p>
 <p>Senior Kristen Brockett serves as president of SPARC and has worked to advocate for mental health resources on campus. She thinks there can always be more mental health resources added, but the university needs to specifically focus on adding more staff psychologists.</p>
 <p>Junior psychology major Erin Hill serves as the administrator of the Help Center, an on-campus peer crisis hotline. She offers free peer counseling in-person and over the phone for students struggling with mental health.</p>
@@ -85,16 +94,21 @@
  <em>Source: UMD Counseling Center Annual Report 2017-2018</em> <br>
 </div>
 <!-- END race graphic container-->
-</div><br>
+<br>
 <p>Although many students have voiced their desire for more staff psychologists, the Counseling Center has never been at full staff capacity, said Counseling Center Director Sharon Kirkland-Gordon.</p>
 <p>“I can’t remember a time we were fully staffed,” she said. “Some staff members have died unexpectedly in prior years or they leave for a different opportunity.”</p>
 <p>The center just hired three staff psychologists who will start seeing students in the fall, putting the Counseling Center at full staff capacity. Then, Kirkland-Gordon wants to reevaluate the ratio of staff psychologists to students to see how the student body’s needs are being met.</p><br>
-<a name="chapter3"></a><h1>A National Crisis</h1>
+<a name="chapter3"></a><img src="https://img.icons8.com/doodle/48/000000/smart-.png" class="icon"><h1>A National Crisis</h1>
 <p>Suicide is the second leading cause of death among college students, according to Active Minds, a nonprofit advocacy organization for mental health. With 39% of college students experiencing a serious mental health issue, they are more likely to talk about mental health than older generations. </p>
 <p>Even though mental illness is starting to become destigmatized, only 44% of adults and less than 20% of children and teenagers with diagnosed mental illnesses get the treatment they need. One in five adults will have a diagnosable mental illness. Half of the world population will experience a mental health condition in their lifetime. </p>
+<img src="ccbuilding.jpg" class="ccbuilding">
+<p class="caption">The UMD Counseling Center is located in the Shoemaker Building on South Campus.<br>Source: UMD Division of Student Affairs.</p><br>
+<br><p> For those struggling at the University of Maryland, mental health resources are available across campus. Th University Health Center offers psychiatricservices for students needing medication for their mental illness. The Counseling Center, located in the Shoemaker Building, offers eight free counseling sessions for every student. After students run out of their free session, they will be referred to an off-campus provider. Off-campus psychiatric services can cost well over $100 per one-hour session, so a more afforable option is the Psychology Clinic on campus. The clinic is staffed by doctoral psychology students, so they offer sliding scale price depending on how much an individual can afford. The Department of Recreation and Wellness offers a variety of free exercise classes for UMD students, including yoga classes, which is a commonly stress reduction technique.</p>
+<strong><p>If you or someone you know if struggling with mental illness or suicidal thoughts, contact the National Suicide Prevention Lifeline at 1-800-273-8255. </p></strong>
     <iframe src="https://uploads.knightlab.com/storymapjs/97d93884d49d417b145d9448e65e4131/umd-campus-mental-health-resources/index.html" frameborder="0" width="100%" height="800"></iframe>
   <!-- END graphic container-->
     <br><br><br>
+</div>
 </div>
 </div>
 </div>
