--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -72,7 +72,9 @@
   <p>This budget covers the salaries of 17 psychologists, one care manager, two triage counselors, two seasonal psychologists and four full-time doctoral interns. Students have eight free individual counseling sessions per year, but many students wait over a month to been seen.</p>
 <a name="chapter2"></a><img src="https://img.icons8.com/doodle/48/000000/smart-.png" class="icon"><h1>Mental Health at UMD</h1>
 <p>In February 2018, a student group called Scholars Promoting and Revitalizing Care launched the #30DaysTooLate campaign to draw attention to the excessive wait times at the Counseling Center. </p>
-<p>Senior Kristen Brockett serves as president of SPARC and has worked to advocate for mental health resources on campus. She thinks there can always be more mental health resources added, but the university needs to specifically focus on adding more staff psychologists.</p>
+<img src="sparc.png" class="sparc-pic">
+<p class="caption">SPARC launches its social media campaign called #30DaysTooLate in February 2018 <br>to draw attention to long wait times at the UMD Counseling Center.</p>
+<br><p>Senior Kristen Brockett serves as president of SPARC and has worked to advocate for mental health resources on campus. She thinks there can always be more mental health resources added, but the university needs to specifically focus on adding more staff psychologists.</p>
 <p>Junior psychology major Erin Hill serves as the administrator of the Help Center, an on-campus peer crisis hotline. She offers free peer counseling in-person and over the phone for students struggling with mental health.</p>
 <p>“I don’t think the student body’s needs are being fully met and I think there are so many factors that contribute to that,” Hill said. “I think by nature, a college campus itself will almost always fail to meet student needs in this way because of the limited resources available.”</p>
 <p>Counseling Center Associate Director Ted Pickett attributes the influx of students seeking counseling services to the success of destigmatizing mental illness among young adults. </p>
