--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -102,6 +102,8 @@
 <p>The center just hired three staff psychologists who will start seeing students in the fall, putting the Counseling Center at full staff capacity. Then, Kirkland-Gordon wants to reevaluate the ratio of staff psychologists to students to see how the student body’s needs are being met.</p><br>
 <a name="chapter3"></a><img src="https://img.icons8.com/doodle/48/000000/smart-.png" class="icon"><h1>A National Crisis</h1>
 <p>Suicide is the second leading cause of death among college students, according to Active Minds, a nonprofit advocacy organization for mental health. With 39% of college students experiencing a serious mental health issue, they are more likely to talk about mental health than older generations. </p>
+<img src="mental-labels.JPG" class="pic2"><br>
+<p class="caption">Source: Flickr</p>
 <p>Even though mental illness is starting to become destigmatized, only 44% of adults and less than 20% of children and teenagers with diagnosed mental illnesses get the treatment they need. One in five adults will have a diagnosable mental illness. Half of the world population will experience a mental health condition in their lifetime. </p>
 <img src="ccbuilding.jpg" class="ccbuilding">
 <p class="caption">The UMD Counseling Center is located in the Shoemaker Building on South Campus.<br>Source: UMD Division of Student Affairs.</p><br>
