--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -66,7 +66,7 @@
     </div>
 
   <!-- End embed container -->
-  <p class="caption">Sophomore Reid Buskirk shares his experience with mental illness on campus. Source: UMD Department of Resident Life.</p><br>
+  <p class="caption">Sophomore Reid Buskirk shares advice for students struggling with mental illness on campus. Source: UMD Department of Resident Life.</p><br>
   <br><p>The University of Maryland has various mental health resources on campus, including counseling and psychiatric services. While psychiatric services at the University Health Center are funded by an annual $82 student fee, the Counseling Center is fully funded by the state government.</p>
   <p>The counseling service budget is $2,348,578. The Pepsi Corporation has awarded the center grants that cover approximately 10% of its budget, while the state covers the rest of it.</p>
   <p>This budget covers the salaries of 17 psychologists, one care manager, two triage counselors, two seasonal psychologists and four full-time doctoral interns. Students have eight free individual counseling sessions per year, but many students wait over a month to been seen.</p>
@@ -102,12 +102,13 @@
 <p>The center just hired three staff psychologists who will start seeing students in the fall, putting the Counseling Center at full staff capacity. Then, Kirkland-Gordon wants to reevaluate the ratio of staff psychologists to students to see how the student body’s needs are being met.</p><br>
 <a name="chapter3"></a><img src="https://img.icons8.com/doodle/48/000000/smart-.png" class="icon"><h1>A National Crisis</h1>
 <p>Suicide is the second leading cause of death among college students, according to Active Minds, a nonprofit advocacy organization for mental health. With 39% of college students experiencing a serious mental health issue, they are more likely to talk about mental health than older generations. </p>
-<img src="mental-labels.JPG" class="pic2"><br>
+<img src="mental-labels.jpg" class="pic2">
 <p class="caption">Source: Flickr</p>
 <p>Even though mental illness is starting to become destigmatized, only 44% of adults and less than 20% of children and teenagers with diagnosed mental illnesses get the treatment they need. One in five adults will have a diagnosable mental illness. Half of the world population will experience a mental health condition in their lifetime. </p>
 <img src="ccbuilding.jpg" class="ccbuilding">
 <p class="caption">The UMD Counseling Center is located in the Shoemaker Building on South Campus.<br>Source: UMD Division of Student Affairs.</p><br>
-<br><p> For those struggling at the University of Maryland, mental health resources are available across campus. Th University Health Center offers psychiatricservices for students needing medication for their mental illness. The Counseling Center, located in the Shoemaker Building, offers eight free counseling sessions for every student. After students run out of their free session, they will be referred to an off-campus provider. Off-campus psychiatric services can cost well over $100 per one-hour session, so a more afforable option is the Psychology Clinic on campus. The clinic is staffed by doctoral psychology students, so they offer sliding scale price depending on how much an individual can afford. The Department of Recreation and Wellness offers a variety of free exercise classes for UMD students, including yoga classes, which is a commonly stress reduction technique.</p>
+<br><p> For those struggling at the University of Maryland, mental health resources are available across campus. Th University Health Center offers psychiatricservices for students needing medication for their mental illness. The Counseling Center, located in the Shoemaker Building, offers eight free counseling sessions for every student. After students run out of their free session, they will be referred to an off-campus provider.</p>
+  <p>Off-campus psychiatric services can cost well over $100 per one-hour session, so a more afforable option is the Psychology Clinic on campus. The clinic is staffed by doctoral psychology students, so they offer sliding scale price depending on how much an individual can afford. The Department of Recreation and Wellness offers a variety of free exercise classes for UMD students, including yoga classes, which is a commonly stress reduction technique.</p>
 <strong><p>If you or someone you know if struggling with mental illness or suicidal thoughts, contact the National Suicide Prevention Lifeline at 1-800-273-8255. </p></strong>
     <iframe src="https://uploads.knightlab.com/storymapjs/97d93884d49d417b145d9448e65e4131/umd-campus-mental-health-resources/index.html" frameborder="0" width="100%" height="800"></iframe>
   <!-- END graphic container-->
